--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,29 @@ body {
   min-height: 100%;
 }
 
+
+.header {
+  padding: 10px;
+  background-color: #edac42;
+  color: #fff;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.header h1 {
+  font-size: 25px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+}
+
+.rio {
+  margin-top: 20px;
+}
+
 .card-container {
   height: 88vh;
   overflow: scroll;
